# Math-Solver

./: .gitignore  CMakeLists.txt  README.md  basic_math.cpp
.github/workflows/: cmake-multi-platform.yml
include/: AST.hpp  Context.hpp  Lexer.hpp  Parser.hpp  Token.hpp  Value.hpp
src/: AST.cpp  Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
